fix(shared-ui): Popup z-index

--- a/packages/shared-ui/components/layout/DialogBox/style.scss
+++ b/packages/shared-ui/components/layout/DialogBox/style.scss
@@ -7,6 +7,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 1000;
 
   .overlay {
     position: fixed;
@@ -17,6 +18,7 @@
     backdrop-filter: blur(3px);
     background-color: rgba(164, 164, 164, 0.5);
   }
+
   .popup {
     background: var(--backgroundColor);
     padding: 20px 30px;
