--- a/packages/shared-ui/components/layout/Popup/Popup.module.scss
+++ b/packages/shared-ui/components/layout/Popup/Popup.module.scss
@@ -7,6 +7,7 @@
   width: 100%;
   height: 100%;
   animation: 0.2s fadeBackground forwards;
+  z-index: 1000;
 
   &.visible {
     display: block;
